2006-08-17  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Fix tutorial to include code for the simple
	printing example

2006-08-16  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/examplewindow.cc:
	* examples/book/printing/advanced/examplewindow.h:
	Bind pointers to RefPtrs of PrintFormOperation. This solves the issue
	of PFOs having unnecessarily increased refcount and makes them deleted
	as soon as they're completed.
	Removed on_printoperation_preview_done() as the settings stay in
	the print dialog anyway.
	* examples/book/printing/advanced/main.cc: Deleted a commented line.
	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	Explained the use of m_SpinAdjustment.
	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h:
	Uncommented the code for custom tab in print dialog. Within
	on_create_custom_widget(), use Gtk::manage() for the main vbox too.
	Removed signal_preview_done.

	Also removed the g_debugs and reformatted some lines in all files.

2006-08-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Require the latest cairomm (0.7.0), which we 
	apparently need.

2006-08-11  Marko Anastasov  <marko@marko.anastasov.name>

	* gtk/src/pagesetup.hg
	* gtk/src/pagesetupunixdialog.hg
	* gtk/src/printcontext.hg:
	* gtk/src/printer.hg:
	* gtk/src/printoperation.hg:
	* gtk/src/printunixdialog.hg:
	* gtk/src/recentchooser.hg:
	* gtk/src/recentchooserdialog.hg:
	* gtk/src/recentchoosermenu.hg:
	* gtk/src/recentchooserwidget.hg:
	* gtk/src/recentfilter.hg:
	* gtk/src/recentinfo.hg:
	* gtk/src/recentmanager.hg: Added or updated from C docs.
	* gtk/src/printoperationpreview.hg: Removed a TODO about ready and
	got_page_size signals.

2006-08-11  Marko Anastasov  <marko@marko.anastasov.name>

	* docs/tutorial/figures/Makefile.am: