@@ -199,7 +199,7 @@ AC_LANG_POP(C++)
 #########################################################################
 gtkmm_min_glibmm_version=2.11.3
 gtkmm_min_gtk_version=2.10.0
-gtkmm_min_cairomm_version=0.7.0
+gtkmm_min_cairomm_version=1.1.12
 
 
 GLIBMM_LIBDIR=`pkg-config --variable=libdir glibmm-2.4`
