@@ -85,11 +85,11 @@ public:
 #m4 _CONVERSION(`GtkWidget*',`const VScrollbar*',`Glib::wrap((GtkVScrollbar*)$3)')
 #m4 _CONVERSION(`GtkWidget*',`HScrollbar*',`Glib::wrap((GtkHScrollbar*)$3)')
 #m4 _CONVERSION(`GtkWidget*',`const HScrollbar*',`Glib::wrap((GtkHScrollbar*)$3)')
-  _WRAP_METHOD(VScrollbar* get_vscrollbar(), gtk_scrolled_window_get_vscrollbar, refcount)
-  _WRAP_METHOD(const VScrollbar* get_vscrollbar() const, gtk_scrolled_window_get_vscrollbar, refcount)
+  _WRAP_METHOD(VScrollbar* get_vscrollbar(), gtk_scrolled_window_get_vscrollbar)
+  _WRAP_METHOD(const VScrollbar* get_vscrollbar() const, gtk_scrolled_window_get_vscrollbar)
 
-  _WRAP_METHOD(HScrollbar* get_hscrollbar(), gtk_scrolled_window_get_hscrollbar, refcount)
-  _WRAP_METHOD(const HScrollbar* get_hscrollbar() const, gtk_scrolled_window_get_hscrollbar, refcount)
+  _WRAP_METHOD(HScrollbar* get_hscrollbar(), gtk_scrolled_window_get_hscrollbar)
+  _WRAP_METHOD(const HScrollbar* get_hscrollbar() const, gtk_scrolled_window_get_hscrollbar)
 
   _MEMBER_GET(vscrollbar_visible,vscrollbar_visible,bool,guint)
   _MEMBER_GET(hscrollbar_visible,hscrollbar_visible,bool,guint)
