@@ -1,3 +1,11 @@
+2006-08-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in: Correct the needed cairomm version.
+	* gdk/gdkmm/general.h: Add documentation for Cairo::rectangle() and 
+	Cairo::region().
+	* gtk/src/scrolledwindow.hg: get_[v|h]scrollbar(): Do not use refreturn, 
+	because they are widgets, not just refcountable objects.
+
 2006-08-17  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Fix tutorial to include code for the simple
